# kitsune

./: .SRCINFO  CHEATSHEET.md  COMMANDS.md  Cargo.toml  LICENSE.md  PKGBUILD  QUICKSTART_10.md  README.md  STATUS.md  kitsune.install
%h/.cache/mpv/: 7D6817E3C130F0362528531171DAA52F702D0D15A05362392563AEED17651368  EEE77B42EE5C73757F38F52FE0592F614B24FBA103DABD951AAFE5BD22E3315A  FA6A199361DE21C2E40FE1E039298E4CBE199255C49DCBEEAF0D92356F092955
.github/workflows/: notify-flatpak.yml  release-on-main.yml
completions/: _kitsune  kitsune.bash  kitsune.fish
config/: base.conf  base.conf.default  cava.conf
config/backups/20260209-230125/: base.conf.bak
config/groups/: default.group  perfil__uno.group  prueba.group
config/profiles/: bars_balanced.profile  bars_punchy.profile  bars_soft.profile  ring_energy.profile  ring_video_dos.profile  ring_video_uno.profile  test.profile
docs/: ARCHITECTURE.md  COMMANDS.md
scripts/: install-completions.sh  install.sh  kitsune.sh  monitor-fallback-watch.sh  profile-edit.sh  release-check.sh  release-github.sh  set-backend.sh  set-color-poll.sh  set-dynamic-color.sh  set-group-file.sh  set-mode.sh  set-monitor-fallback.sh  set-output-target.sh  set-particles-look.sh  set-particles-preset.sh  set-particles.sh  set-postfx.sh  set-ring-fill-softness.sh  set-rotate-profiles.sh  set-rotation.sh  set-runtime-mode.sh  set-spectrum-mode.sh  set-style.sh  set-visual.sh  set-wave-roundness.sh  set-waves-fill-preset.sh  start.sh  stop.sh  test-profile-load.sh  tune.sh  wallpaper-accent-watcher.sh
src/: main.rs
tests/: cli-smoke.sh
(+1 files in other folders)
